bk_ida/gccida/c2/splay_tree_insert
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/splay_tree_insert/src/splay-tree.c:824:12: error: expected expression
*( _OWORD *)&result->left = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/splay_tree_insert/src/splay-tree.c:824:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->left = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/splay_tree_insert/src/obj/splay-tree.o] Error 1
